[gd_scene load_steps=5 format=3 uid="uid://37xe6nifn6jh"]

[ext_resource type="Script" uid="uid://dbtctyko65458" path="res://Scripts/message_app.gd" id="1_y3x6g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4kvt"]
bg_color = Color(0.866667, 0.486275, 0.258824, 0.690196)

[sub_resource type="Theme" id="Theme_y3x6g"]
PanelContainer/styles/panel = SubResource("StyleBoxFlat_v4kvt")

[sub_resource type="Theme" id="Theme_ellov"]
Button/font_sizes/font_size = 25

[node name="Messages" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -350.0
offset_right = 450.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y3x6g")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
offset_right = 900.0
offset_bottom = 700.0
theme = SubResource("Theme_y3x6g")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="TopLeftMenu" type="HBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseBtn" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/TopLeftMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Close"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/HBoxContainer/VBoxContainer/TopLeftMenu"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="NewThread" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/TopLeftMenu"]
layout_mode = 2
size_flags_horizontal = 3
text = "New Thread"

[node name="Contacts" type="ScrollContainer" parent="PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 14.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/VBoxContainer/Contacts"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Alex" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/Contacts/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme = SubResource("Theme_ellov")
theme_override_font_sizes/font_size = 20
text = "Alex"

[node name="Mom" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/Contacts/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
theme_override_font_sizes/font_size = 20
text = "Mom"

[node name="Contact3" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/Contacts/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Contact4" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/Contacts/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Contact5" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/Contacts/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Contact6" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/Contacts/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Contact7" type="Button" parent="PanelContainer/HBoxContainer/VBoxContainer/Contacts/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="Threads" type="ScrollContainer" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/Threads"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Thread" type="RichTextLabel" parent="PanelContainer/HBoxContainer/Threads/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 7
size_flags_stretch_ratio = 9.0
bbcode_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HBoxContainer/Threads/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="ItemList" type="ItemList" parent="PanelContainer/HBoxContainer/Threads/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0

[node name="SendBtn" type="Button" parent="PanelContainer/HBoxContainer/Threads/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Send
"
